fixed jumpy nav

--- a/client/src/css/Navigation.css
+++ b/client/src/css/Navigation.css
@@ -73,7 +73,7 @@
     .home .nav-bar {
         padding: 0.5em 0.5em;
         margin-top: 0;
-        top: 25%;
+        top: 10rem;
         right: unset;
     }
 
