--- a/client/src/css/UserProfile.css
+++ b/client/src/css/UserProfile.css
@@ -84,8 +84,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin: 1rem 0;
-    padding: 1rem, 0;
 }
 
 .profile-trail-reports .reports-container {
